# Conversational-GPT-SFT-DPO

./: .gitignore  README.md  _data.ipynb  _generate.ipynb  _model.ipynb  _sft.ipynb  chat.py  dpo.py  model.py  pyproject.toml  sft.py  todo.txt
src/: chat.py  chatml.py  conversation.py  data_util.py  dpo_util.py  generator.py  model.py  oasst.py  preprocess.py  text_util.py  train_util.py  trainer.py  ultrafeedback.py  util.py  validation.py
src/data/: dataset.py  hh_rlhf.py  oasst.py  smoltalk.py  ultrafeedback.py
